@@ -40,7 +40,8 @@ __aarch64_sync_cache_range (const void *base, const void *end)
      as per the GNU definition of __clear_cache.  */
 
   /* Make the start address of the loop cache aligned.  */
-  address = (const char*) ((unsigned long) base & ~ (dcache_lsize - 1));
+  address = (const char*) ((__UINTPTR_TYPE__) base
+			   & ~ (__UINTPTR_TYPE__) (dcache_lsize - 1));
 
   for (address; address < (const char *) end; address += dcache_lsize)
     asm volatile ("dc\tcvau, %0"
@@ -51,7 +52,8 @@ __aarch64_sync_cache_range (const void *base, const void *end)
   asm volatile ("dsb\tish" : : : "memory");
 
   /* Make the start address of the loop cache aligned.  */
-  address = (const char*) ((unsigned long) base & ~ (icache_lsize - 1));
+  address = (const char*) ((__UINTPTR_TYPE__) base
+			   & ~ (__UINTPTR_TYPE__) (icache_lsize - 1));
 
   for (address; address < (const char *) end; address += icache_lsize)
     asm volatile ("ic\tivau, %0"
