@@ -1,3 +1,10 @@
+2013-01-17  Yufeng Zhang  <yufeng.zhang@arm.com>
+
+	* config/aarch64/sync-cache.c (__aarch64_sync_cache_range): Cast the
+	results of (dcache_lsize - 1) and (icache_lsize - 1) to the type
+	__UINTPTR_TYPE__; also cast 'base' to the same type before the
+	alignment operation.
+
 2013-01-15  Sofiane Naci  <sofiane.naci@arm.com>
 
 	* config/aarch64/sync-cache.c (__aarch64_sync_cache_range): Update
